BUG#28722 (Multi-engine statements on has_own_binlogging engine): WL#3931 (Multi-table statement involving self-logging engines):

Adding logic to generate error if more than one engine is involved in
the statement and at least one engine is self-logging (i.e., has the
HA_HAS_OWN_BINLOGGING table flags set).